# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = {{ cookiecutter.package_name }}
version = 0.1.0
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
description  = {{ cookiecutter.package_description }}
description-content-type = text/plain
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}:{{ cookiecutter.package_name }}_cli

[options]
include_package_data = True
install_requires =
py_modules =
    {{ cookiecutter.package_name }}
requires-python = >=3.6

